# mtblspy

./: .gitignore  .gitlab-ci.yml  README.md  fix_tests.py  fix_tests2.py  pyproject.toml
docs/: submission_workflow_guide.md
examples/submission/: README.md
examples/submission/invalid-bad-names/MTBLSXXX/: a_MTBLSXXX_lc-ms.txt  bad name.txt  i_Investigation.txt
examples/submission/invalid-incomplete-metadata/MTBLSXXX/: a_MTBLSXXX_lc-ms.txt  i_Investigation.txt  m_MTBLSXXX.tsv  s_MTBLSXXX.txt
examples/submission/valid/MTBLSXXX/: a_MTBLSXXX_lc-ms.txt  i_Investigation.txt  m_MTBLSXXX.tsv  (+1 more)
mtblspy/: config.py  credentials.py
mtblspy/commands/: __init__.py  cli.py  output.py
mtblspy/commands/auth/: __init__.py  auth_cli.py  login.py  logout.py
mtblspy/commands/config/: __init__.py  config_cli.py  config_set.py  config_show.py
mtblspy/commands/submissions/: __init__.py  cli_utils.py  client.py  exceptions.py  local_validation.py  models.py  study_creation_input.py  submission_check_folders.py  submission_clean_ftp_temp_files.py  submission_cli.py  submission_compress_data_files.py  submission_create.py  submission_delete.py  submission_download.py  submission_ftp_credentials.py  submission_list.py  submission_sample_input.py  submission_submit.py  submission_templates.py  submission_upload_data.py  submission_upload_metadata.py  submission_validate.py  submission_validate_local.py  submission_validation_debug.py  template_files.py
scripts/: run_submission_pipeline.py
tests/: test_cli.py  test_config.py  test_local_validation.py  test_submission_client.py
(+3 files in other folders)
