[project]
name = "mtblspy"
version = "0.1.0"
description = "MetaboLights Submission CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "keyring>=25.0.0",
]

[project.scripts]
mtbls = "mtblspy.commands.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtblspy"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]
